--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ name = "email_newsletter"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 
 
