--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,22 @@ name = "email_newsletter"
 
 [dependencies]
 actix-web = "4"
+config = "0.13.3"
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+
+
+[dependencies.sqlx]
+version ="0.7"
+default-features = false
+features = [
+	"runtime-tokio-rustls",
+	"macros",
+	"postgres",
+	"uuid",
+	"chrono",
+	"migrate"
+]
 
 
 [dev-dependencies]
