--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ name = "email_newsletter"
 
 [dependencies]
 actix-web = "4"
+chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 config = "0.13.3"
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+uuid = { version = "1.4.1", features = ["v4"] }
 
 
 [dependencies.sqlx]
