--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ name = "email_newsletter"
 actix-web = "4"
 chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 config = "0.13.3"
+log = "0.4.20"
 random_name_generator = "0.3.6"
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
