--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ log = "0.4.20"
 random_name_generator = "0.3.6"
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+tracing = { version = "0.1.40", features = ["log"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 
