--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ random_name_generator = "0.3.6"
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 tracing = { version = "0.1.40", features = ["log"] }
+tracing-bunyan-formatter = "0.3.9"
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 
