--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,11 @@ name = "email_newsletter"
 actix-web = "4"
 chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 config = "0.13.3"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 tracing = { version = "0.1.40", features = ["log"] }
+tracing-actix-web = "0.7.8"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
@@ -45,3 +47,4 @@ features = [
 [dev-dependencies]
 reqwest = "0.11"
 random_name_generator = "0.3.6"
+once_cell = "1.18.0"
