--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 config = "0.13.3"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
+serde-aux = "4"
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-actix-web = "0.7.8"
