--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tracing-actix-web = "0.7.8"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
+unicode-segmentation = "1.11.0"
 uuid = { version = "1.4.1", features = ["v4"] }
 
 
