--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ name = "email_newsletter"
 [dependencies]
 actix-web = "4"
 chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
+claims = "0.7.1"
 config = "0.13.3"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
